--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.24.0
-tensorflow==2.12.0
+tensorflow
 yfinance==0.2.26
-scikit-learn==1.3.0
+scikit-learn
 matplotlib==3.7.2
 pandas==2.0.3
 numpy==1.25.0
